--- a/config/wok.config
+++ b/config/wok.config
@@ -5,11 +5,12 @@
       {<<"my_service">>, dummy_service_module}
     ]},
     {consumer_group, <<"MyConsumer">>},
+    {max_messages, 3},
     {topics, [
-      % {topic name, fetch frequency, max fork, options}
-      {<<"test">>, 5000, 10, [{max_bytes, 10485760}]},
-      {<<"public">>, 5000, 10, [{max_bytes, 10485760}]},
-      {<<"service">>, 10000, 50, [{max_bytes, 10485760}]}
+      % {topic name, options}
+      {<<"test">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
+      {<<"public">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
+      {<<"service">>, [{fetch_frequency, 10000}, {max_bytes, 10485760}]}
     ]}
   ]},
   {kafe, [
@@ -22,7 +23,7 @@
   ]},
   {lager, [
     {handlers, [
-      {lager_console_backend, debug},
+      {lager_console_backend, [info, {lager_default_formatter, [date, " ", time," [",severity,"] -- ", module, ":", function, " (", pid, "/", line, ") -- ", message, "\n"]}]},
       {lager_file_backend, [{file, "log/wok_error.log"}, {level, error}]},
       {lager_file_backend, [{file, "log/wok_debug.log"}, {level, debug}]},
       {lager_file_backend, [{file, "log/wok_console.log"}, {level, info}]}
