Add REST interface

--- a/config/wok.config
+++ b/config/wok.config
@@ -1,16 +1,27 @@
 [
   {wok, [
-    {services, [
-      % {service name, module name}
-      {<<"my_service">>, dummy_service_module}
-    ]},
-    {consumer_group, <<"MyConsumer">>},
-    {max_messages, 3},
-    {topics, [
-      % {topic name, options}
-      {<<"test">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
-      {<<"public">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
-      {<<"service">>, [{fetch_frequency, 10000}, {max_bytes, 10485760}]}
+    {messages, [
+      {services, [
+        % {service name, module name}
+        {<<"my_service">>, dummy_service_handler}
+      ]},
+      {consumer_group, <<"MyConsumer">>},
+      {max, 3},
+      {topics, [
+        % {topic name, options}
+        {<<"test">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
+        {<<"public">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
+        {<<"service">>, [{fetch_frequency, 10000}, {max_bytes, 10485760}]}
+      ]}
+    ]}
+    , {rest, [
+      {port, 8080},
+      {ip, "0.0.0.0"},
+      {max_conn, 100},
+      {routes, [
+        {'GET', "/my_service", {dummy_service_handler, my_service}},
+        {'POST', "/my_service", {dummy_service_handler, my_service_post}}
+      ]}
     ]}
   ]},
   {kafe, [
