--- a/config/wok.config
+++ b/config/wok.config
@@ -3,7 +3,7 @@
     {messages, [
       {services, [
         % {service name, module name}
-        {<<"my_service">>, dummy_service_handler}
+        {<<"my_service">>, {dummy_service_handler, my_service}}
       ]},
       {consumer_group, <<"MyConsumer">>},
       {max, 3},
@@ -14,19 +14,19 @@
         {<<"service">>, [{fetch_frequency, 10000}, {max_bytes, 10485760}]}
       ]}
     ]}
-    , {rest, [
+  , {rest, [
       {port, 8080},
       {ip, "0.0.0.0"},
       {max_conn, 100},
       {routes, [
-        {'GET', "/my_service", {dummy_service_handler, my_service}},
+        {'GET', "/my_service", {dummy_service_handler, my_service_get}},
         {'POST', "/my_service", {dummy_service_handler, my_service_post}}
       ]}
     ]}
   ]},
   {kafe, [
     {brokers, [
-      {"kafka1-paris.finexkap.paris", 9092}
+      {"localhost", 9092}
     ]},
     {client_id, <<"kafe">>},
     {api_version, 0},
