--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,7 @@
   {kafe, ".*", {git, "https://github.com/nexkap/kafe.git", {branch, "master"}}},
   {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", {branch, "master"}}},
   {eutils, ".*", {git, "https://github.com/emedia-project/eutils.git", {branch, "master"}}},
-  {edown, ".*", {git, "https://github.com/uwiger/edown.git", {branch, "master"}}},
+  {edown, ".*", {git, "https://github.com/uwiger/edown.git", {tag, "0.6"}}},
   {rebar_deps_graph, ".*", {git, "https://github.com/emedia-project/rebar_deps_graph.git", {branch, "master"}}}
 ]}.
 
