--- a/config/wok.config
+++ b/config/wok.config
@@ -20,6 +20,7 @@
       {max_conn, 100},
       {routes, [
         {'GET', "/my_service", {dummy_service_handler, my_service_get}},
+        {'GET', "/my_service2", {dummy_service_handler, my_service_get2}},
         {'POST', "/my_service", {dummy_service_handler, my_service_post}}
       ]}
     ]}
