--- a/rebar.config
+++ b/rebar.config
@@ -5,11 +5,14 @@
 
 {deps, [
   {lager, ".*", {git, "https://github.com/basho/lager.git", {branch, "master"}}},
-  {wok_message, ".*", {git, "git@github.com:homeswap/wok_message.git", {branch, "master"}}},
-  {kafe, ".*", {git, "https://github.com/nexkap/kafe.git", {branch, "master"}}},
+  {wok_message, ".*", {git, "git@gitlab.scalezen.com:msaas/wok_message.git", {branch, "master"}}},
+  % {wok_message, ".*", {git, "git@github.com:homeswap/wok_message.git", {branch, "master"}}},
+  {pipette, ".*", {git, "git@gitlab.scalezen.com:msaas/pipette.git", {branch, "master"}}},
+  % {pipette, ".*", {git, "git@github.com:homeswap/pipette.git", {branch, "master"}}},
+  {kafe, ".*", {git, "https://github.com/homeswap/kafe.git", {branch, "master"}}},
   {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", {branch, "master"}}},
   {eutils, ".*", {git, "https://github.com/emedia-project/eutils.git", {branch, "master"}}},
-  {edown, ".*", {git, "https://github.com/uwiger/edown.git", {tag, "0.6"}}},
+  {edown, ".*", {git, "https://github.com/uwiger/edown.git", {branch, "master"}}},
   {rebar_deps_graph, ".*", {git, "https://github.com/emedia-project/rebar_deps_graph.git", {branch, "master"}}}
 ]}.
 
