--- a/rebar.config
+++ b/rebar.config
@@ -29,5 +29,5 @@
              , {packages, false}
              , {stylesheet, ""}   % don't copy stylesheet.css
              , {image, ""}        % don't copy erlang.png
-             , {top_level_readme, {"./documentation.md", "https://github.com/homeswap/wok"}}
+             , {top_level_readme, {"./documentation.md", "https://gitlab.scalezen.com/msaas/wok"}}
             ]}.
