Update makefile and rebar config
Create dev environment

--- a/config/wok.config
+++ b/config/wok.config
@@ -1,6 +1,7 @@
 [
   {wok, [
     {messages, [
+      {handler, wok_message},
       {services, [
         % {service name, module name}
         {<<"my_service">>, {dummy_service_handler, my_service}}
