--- a/rebar.dev.config
+++ b/rebar.dev.config
@@ -5,8 +5,11 @@
 
 {deps, [
   {lager, ".*", {git, "https://github.com/basho/lager.git", {branch, "master"}}},
+  {wok_message, ".*", {git, "git@gitlab.scalezen.com:msaas/wok_message.git", {branch, "master"}}},
   {wok_message_handler, ".*", {git, "git@gitlab.scalezen.com:msaas/wok_message_handler.git", {branch, "master"}}},
+  % {wok_message, ".*", {git, "git@github.com:homeswap/wok_message.git", {branch, "master"}}},
   {pipette, ".*", {git, "git@gitlab.scalezen.com:msaas/pipette.git", {branch, "master"}}},
+  % {pipette, ".*", {git, "git@github.com:homeswap/pipette.git", {branch, "master"}}},
   {kafe, ".*", {git, "https://github.com/homeswap/kafe.git", {branch, "master"}}},
   {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", {branch, "master"}}},
   {eutils, ".*", {git, "https://github.com/emedia-project/eutils.git", {branch, "master"}}},
@@ -15,6 +18,11 @@
 ]}.
 
 {plugins, [deps_graph_plugin]}.
+
+{eunit_opts, [
+  verbose,
+  {report,{eunit_surefire,[{dir,"."}]}}
+]}.
 
 {edoc_opts, [{doclet, edown_doclet}
              , {app_default, "http://www.erlang.org/doc/man"}
