Add pipette support

--- a/config/wok.config
+++ b/config/wok.config
@@ -7,10 +7,13 @@
         {<<"my_service">>, {dummy_service_handler, my_service}}
       ]},
       {consumer_group, <<"MyConsumer">>},
-      {max, 3},
+      {local_queue_name, <<"my_local_queue">>},
+      {local_consumer_group, <<"MyLocalConsumer">>},
+      {max_services_fork, 3},
       {topics, [
         % {topic name, options}
         {<<"test">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
+        {<<"repl">>, [{fetch_frequency, 8000}, {max_bytes, 10485760}]},
         {<<"public">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
         {<<"service">>, [{fetch_frequency, 10000}, {max_bytes, 10485760}]}
       ]}
@@ -33,6 +36,14 @@
     {client_id, <<"kafe">>},
     {api_version, 0},
     {correlation_id, 0}
+  ]},
+  {pipette, [
+    {segment_path, "./queues"},
+    {segment_memory_size, 10485760}, % B
+    {segment_file_size, 1073741824}, % B
+    {segment_flush_frequency, 0}, % ms (if = 0 flush every new data; if -1 never flush))
+    {retention_hours, 1680}, % hours -- default 128
+    {retention_check_interval, 300000} % ms
   ]},
   {lager, [
     {handlers, [
