--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,7 @@
   {kafe, ".*", {git, "https://github.com/homeswap/kafe.git", {branch, "master"}}},
   {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", {branch, "master"}}},
   {eutils, ".*", {git, "https://github.com/emedia-project/eutils.git", {branch, "master"}}},
-  {edown, ".*", {git, "https://github.com/uwiger/edown.git", {branch, "master"}}},
+  {edown, ".*", {git, "https://github.com/homeswap/edown.git", {branch, "master"}}},
   {rebar_deps_graph, ".*", {git, "https://github.com/emedia-project/rebar_deps_graph.git", {branch, "master"}}}
 ]}.
 
@@ -18,9 +18,12 @@
 
 {edoc_opts, [{doclet, edown_doclet}
              , {app_default, "http://www.erlang.org/doc/man"}
-             , {new, true}
-             , {packages, false}
+             % , {new, true}
+             % , {packages, false}
+             , {source_path, ["src"]}
+             , {overview, "overview.edoc"}
              , {stylesheet, ""}   % don't copy stylesheet.css
              , {image, ""}        % don't copy erlang.png
-             , {top_level_readme, {"./documentation.md", "https://gitlab.scalezen.com/msaas/wok"}}
+             , {edown_target, gitlab}
+             , {top_level_readme, {"./README.md", "https://gitlab.scalezen.com/msaas/wok"}}
             ]}.
