--- a/config/wok.config
+++ b/config/wok.config
@@ -2,9 +2,9 @@
   {wok, [
     {messages, [
       {handler, wok_message},
-      {services, [
-        % {service name, module name}
-        {<<"my_service">>, {dummy_service_handler, my_service}}
+      {controlers, [
+        {<<"my_service/my_controler/my_action">>, {dummy_service_handler, my_action}},
+        {<<"my_service/my_controler/my_answer">>, {dummy_service_handler, my_answer}}
       ]},
       {consumer_group, <<"MyConsumer">>},
       {local_queue_name, <<"my_local_queue">>},
