--- a/rebar.release.config
+++ b/rebar.release.config
@@ -5,8 +5,8 @@
 
 {deps, [
   {lager, ".*", {git, "https://github.com/basho/lager.git", {branch, "master"}}},
-  {wok_message_handler, ".*", {git, "git@gitlab.scalezen.com:msaas/wok_message_handler.git", {branch, "master"}}},
-  {pipette, ".*", {git, "git@gitlab.scalezen.com:msaas/pipette.git", {branch, "master"}}},
+  {wok_message_handler, ".*", {git, "https://github.com/scalezen-developer/wok_message_handler.git", {branch, "master"}}},
+  {pipette, ".*", {git, "https://github.com/scalezen-developer/pipette.git", {branch, "master"}}},
   {kafe, ".*", {git, "https://github.com/homeswap/kafe.git", {branch, "master"}}},
   {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", {branch, "master"}}},
   {eutils, ".*", {git, "https://github.com/emedia-project/eutils.git", {branch, "master"}}}
