--- a/config/wok.config
+++ b/config/wok.config
@@ -18,6 +18,9 @@
         {<<"service">>, [{fetch_frequency, 10000}, {max_bytes, 10485760}]}
       ]}
     ]}
+  , {initializer, [
+      {dummy_initializer, [initializer, args]}
+    ]}
   , {rest, [
       {port, 8080},
       {ip, "0.0.0.0"},
