Add middleware support

--- a/config/wok.config
+++ b/config/wok.config
@@ -21,6 +21,14 @@
   , {initializer, [
       {dummy_initializer, [initializer, args]}
     ]}
+  , {middlewares, [
+      {dummy_middleware, [
+        no_route_prefix, 
+        {route_prefix, "/dummy"},
+        {route, "/dummy_get", "/get_folks"},
+        {init, [dummy_initializer, state]}
+      ]}
+    ]}
   , {rest, [
       {port, 8080},
       {ip, "0.0.0.0"},
