Call middleware chain of responsibility

--- a/config/wok.config
+++ b/config/wok.config
@@ -19,14 +19,14 @@
       ]}
     ]}
   , {initializer, [
-      {dummy_initializer, [initializer, args]}
+      {dummy_initializer, [dummy_initializer, state]}
     ]}
   , {middlewares, [
       {dummy_middleware, [
         no_route_prefix, 
         {route_prefix, "/dummy"},
         {route, "/dummy_get", "/get_folks"},
-        {init, [dummy_initializer, state]}
+        {init, [dummy_middleware, state]}
       ]}
     ]}
   , {rest, [
