Add websocket support

--- a/config/wok.config
+++ b/config/wok.config
@@ -36,7 +36,8 @@
       {routes, [
         {'GET', "/my_service", {dummy_service_handler, my_service_get}},
         {'GET', "/my_service2", {dummy_service_handler, my_service_get2}},
-        {'POST', "/my_service", {dummy_service_handler, my_service_post}}
+        {'POST', "/my_service", {dummy_service_handler, my_service_post}},
+        {'WS', "/ws", dummy_service_handler}
       ]}
     ]}
   ]},
