Add configuration for CORS headers

--- a/config/wok.config
+++ b/config/wok.config
@@ -38,6 +38,27 @@
         {'GET', "/my_service2", {dummy_service_handler, my_service_get2}},
         {'POST', "/my_service", {dummy_service_handler, my_service_post}},
         {'WS', "/ws", dummy_service_handler}
+      ]},
+      {cors, [
+        {'Access-Control-Allow-Methods', [<<"GET">>, 
+                                          <<"POST">>, 
+                                          <<"PUT">>, 
+                                          <<"HEAD">>, 
+                                          <<"OPTIONS">>, 
+                                          <<"DELETE">>]},
+        {'Access-Control-Allow-Origin', <<"*">>},
+        {'Access-Control-Expose-Headers', [<<"X-My-Custom-Header">>,
+                                           <<"X-Another-Custom-Header">>]},
+        {'Access-Control-Max-Age', 1728000},
+        {'Access-Control-Allow-Credentials', true},
+        {'Access-Control-Allow-Headers', [<<"Access-Control-Allow-Origin">>, 
+                                          <<"Authorization">>, 
+                                          <<"Origin">>, 
+                                          <<"x-requested-with">>, 
+                                          <<"Content-Type">>, 
+                                          <<"Content-Range">>, 
+                                          <<"Content-Disposition">>, 
+                                          <<"Content-Description">>]}
       ]}
     ]}
   ]},
