wip: Add plugins support

--- a/config/wok.config
+++ b/config/wok.config
@@ -29,6 +29,13 @@
         {init, [dummy_middleware, state]}
       ]}
     ]}
+  , {plugins, [
+      {dummy_plugin, [
+        {foo, {'*', '*', [saturday, sunday], '*', '*', '*/5'}},
+        {bar, {'*', '*', '*', '*', '*', '*/1'}},
+        {bar, {2020, 1, 1, 0, 0, 0}}
+      ]}
+    ]}
   , {rest, [
       {port, 8080},
       {ip, "0.0.0.0"},
