Finalize wok plugins

--- a/config/wok.config
+++ b/config/wok.config
@@ -31,10 +31,10 @@
     ]}
   , {plugins, [
       {dummy_plugin, [
-        {foo, {'*', '*', [saturday, sunday], '*', '*', '*/5'}},
-        {bar, {'*', '*', '*', '*', '*', '*/1'}},
-        {bar, {2020, 1, 1, 0, 0, 0}}
-      ]}
+        {foo, {'*', '*', [saturday, sunday, monday], '*', '*', '*/5'}},
+        {bar, {'*', '*', '*', '*', '*', '*/5'}},
+        {baz, {2020, 1, 1, 0, 0, 0}}
+      ], [<<"test">>, 0]}
     ]}
   , {rest, [
       {port, 8080},
