Use wok_producer

--- a/rebar.release.config
+++ b/rebar.release.config
@@ -6,6 +6,7 @@
 {deps, [
   {lager, ".*", {git, "https://github.com/basho/lager.git", {branch, "master"}}},
   {wok_message_handler, ".*", {git, "https://github.com/scalezen-developer/wok_message_handler.git", {branch, "master"}}},
+  {wok_producer, ".*", {git, "https://github.com/scalezen-developer/wok_producer.git", {branch, "master"}}},
   {pipette, ".*", {git, "https://github.com/scalezen-developer/pipette.git", {branch, "master"}}},
   {kafe, ".*", {git, "https://github.com/homeswap/kafe.git", {branch, "master"}}},
   {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", {branch, "master"}}},
