--- a/config/wok.config
+++ b/config/wok.config
@@ -12,10 +12,10 @@
       {max_services_fork, 3},
       {topics, [
         % {topic name, options}
-        {<<"test">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
-        {<<"repl">>, [{fetch_frequency, 8000}, {max_bytes, 10485760}]},
-        {<<"public">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
-        {<<"service">>, [{fetch_frequency, 10000}, {max_bytes, 10485760}]}
+        {<<"test">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}, {max_messages, 1000}]},
+        {<<"repl">>, [{fetch_frequency, 8000}, {max_bytes, 10485760}, {max_messages, 1000}]},
+        {<<"public">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}, {max_messages, 1000}]},
+        {<<"service">>, [{fetch_frequency, 10000}, {max_bytes, 10485760}, {max_messages, 1000}]}
       ]}
     ]}
   , {initializer, [
@@ -87,7 +87,7 @@
   ]},
   {lager, [
     {handlers, [
-      {lager_console_backend, [info, {lager_default_formatter, [date, " ", time," [",severity,"] -- ", module, ":", function, " (", pid, "/", line, ") -- ", message, "\n"]}]},
+      {lager_console_backend, [debug, {lager_default_formatter, [date, " ", time," [",severity,"] -- ", module, ":", function, " (", pid, "/", line, ") -- ", message, "\n"]}]},
       {lager_file_backend, [{file, "log/wok_error.log"}, {level, error}]},
       {lager_file_backend, [{file, "log/wok_debug.log"}, {level, debug}]},
       {lager_file_backend, [{file, "log/wok_console.log"}, {level, info}]}
