Update pipette configuration

--- a/config/wok.config
+++ b/config/wok.config
@@ -75,7 +75,12 @@
     ]},
     {client_id, <<"kafe">>},
     {api_version, 0},
-    {correlation_id, 0}
+    {correlation_id, 0},
+    {socker, [
+      {sndbuf, 4194304},
+      {recbuf, 4194304},
+      {buffer, 4194304}
+    ]}
   ]},
   {pipette, [
     {segment_path, "./queues"},
