--- a/rebar.config
+++ b/rebar.config
@@ -5,9 +5,9 @@
 
 {deps, [
   {lager, ".*", {git, "https://github.com/basho/lager.git", {branch, "master"}}},
-  {wok_message_handler, ".*", {git, "git@gitlab.scalezen.com:msaas/wok_message_handler.git", {branch, "master"}}},
-  {wok_producer, ".*", {git, "git@gitlab.scalezen.com:msaas/wok_producer.git", {branch, "master"}}},
-  {pipette, ".*", {git, "git@gitlab.scalezen.com:msaas/pipette.git", {branch, "master"}}},
+  {wok_message_handler, ".*", {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {branch, "master"}}},
+  {wok_producer, ".*", {git, "git@gitlab.botsunit.com:msaas/wok_producer.git", {branch, "master"}}},
+  {pipette, ".*", {git, "git@gitlab.botsunit.com:msaas/pipette.git", {branch, "master"}}},
   {kafe, ".*", {git, "https://github.com/homeswap/kafe.git", {branch, "master"}}},
   {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", {branch, "master"}}},
   {eutils, ".*", {git, "https://github.com/emedia-project/eutils.git", {branch, "master"}}}
