Major bug correction in static files

--- a/config/wok.config
+++ b/config/wok.config
@@ -45,9 +45,9 @@
         {'GET', "/my_service2", {dummy_service_handler, my_service_get2}},
         {'POST', "/my_service", {dummy_service_handler, my_service_post}},
         {'WS', "/ws", dummy_service_handler},
-        {static, "/public", {priv_dir, wok}}
-        % {static, "/public", {priv_dir, wok, "/public"}} 
-        % {static, "/public", {dir, "/tmp/private"}}
+        % {static, "/public", {priv_dir, wok, "static"}}
+        % {static, "/public", {priv_dir, wok}} 
+        % {static, "/public", {dir, "/tmp/data"}}
       ]},
       {cors, [
         {'Access-Control-Allow-Methods', [<<"GET">>, 
