--- a/config/wok.config
+++ b/config/wok.config
@@ -45,7 +45,7 @@
         {'GET', "/my_service2", {dummy_service_handler, my_service_get2}},
         {'POST', "/my_service", {dummy_service_handler, my_service_post}},
         {'WS', "/ws", dummy_service_handler},
-        % {static, "/public", {priv_dir, wok, "static"}}
+        {static, "/public", {priv_dir, wok, "static"}}
         % {static, "/public", {priv_dir, wok}} 
         % {static, "/public", {dir, "/tmp/data"}}
       ]},
