--- a/Makefile.release
+++ b/Makefile.release
@@ -1,13 +1,16 @@
 PROJECT = wok
 
-DEPS = lager wok_message_handler wok_producer pipette kafe cowboy eutils
+DEPS = lager wok_message wok_message_handler wok_producer pipette kafe cowboy bucs doteki
+
 dep_lager = git https://github.com/basho/lager.git master
+dep_wok_message = git https://github.com/botsunit/wok_message.git master
 dep_wok_message_handler = git https://github.com/botsunit/wok_message_handler.git master
 dep_wok_producer = git https://github.com/botsunit/wok_producer.git master
 dep_pipette = git https://github.com/botsunit/pipette.git master
 dep_kafe = git https://github.com/botsunit/kafe.git master
 dep_cowboy = git https://github.com/ninenines/cowboy.git master
-dep_eutils = git https://github.com/emedia-project/eutils.git master
+dep_bucs = git https://github.com/botsunit/bucs.git master
+dep_doteki = git https://github.com/botsunit/doteki.git master
 
 include erlang.mk
 
