Add incoming_http and outgoing_http
rename ingoing to incoming_message and outgoing to outgoing_message

--- a/config/wok.config
+++ b/config/wok.config
@@ -23,9 +23,13 @@
     ]}
   , {middlewares, [
       {dummy_middleware, [
-        no_route_prefix, 
+        no_route_prefix,
         {route_prefix, "/dummy"},
         {route, "/dummy_get", "/get_folks"},
+        {http, [
+          {only, ["*"]},
+          {except, ["/ws"]}
+        ]},
         {init, [dummy_middleware, state]}
       ]}
     ]}
@@ -46,28 +50,28 @@
         {'POST', "/my_service", {dummy_service_handler, my_service_post}},
         {'WS', "/ws", dummy_service_handler},
         {static, "/public", {priv_dir, wok, "static"}}
-        % {static, "/public", {priv_dir, wok}} 
+        % {static, "/public", {priv_dir, wok}}
         % {static, "/public", {dir, "/tmp/data"}}
       ]},
       {cors, [
-        {'Access-Control-Allow-Methods', [<<"GET">>, 
-                                          <<"POST">>, 
-                                          <<"PUT">>, 
-                                          <<"HEAD">>, 
-                                          <<"OPTIONS">>, 
+        {'Access-Control-Allow-Methods', [<<"GET">>,
+                                          <<"POST">>,
+                                          <<"PUT">>,
+                                          <<"HEAD">>,
+                                          <<"OPTIONS">>,
                                           <<"DELETE">>]},
         {'Access-Control-Allow-Origin', <<"*">>},
         {'Access-Control-Expose-Headers', [<<"X-My-Custom-Header">>,
                                            <<"X-Another-Custom-Header">>]},
         {'Access-Control-Max-Age', 1728000},
         {'Access-Control-Allow-Credentials', true},
-        {'Access-Control-Allow-Headers', [<<"Access-Control-Allow-Origin">>, 
-                                          <<"Authorization">>, 
-                                          <<"Origin">>, 
-                                          <<"x-requested-with">>, 
-                                          <<"Content-Type">>, 
-                                          <<"Content-Range">>, 
-                                          <<"Content-Disposition">>, 
+        {'Access-Control-Allow-Headers', [<<"Access-Control-Allow-Origin">>,
+                                          <<"Authorization">>,
+                                          <<"Origin">>,
+                                          <<"x-requested-with">>,
+                                          <<"Content-Type">>,
+                                          <<"Content-Range">>,
+                                          <<"Content-Disposition">>,
                                           <<"Content-Description">>]}
       ]}
     ]}
