--- a/config/wok.config
+++ b/config/wok.config
@@ -28,7 +28,7 @@
         {route, "/dummy_get", "/get_folks"},
         {http, [
           {only, ["*"]},
-          {except, ["/ws"]}
+          {except, ["/ws", {"/my_service", ['GET']}]}
         ]},
         {init, [dummy_middleware, state]}
       ]}
