--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
+{erl_opts, [debug_info, {parse_transform, lager_transform}]}.
 {deps, [
   {lager,".*",{git,"https://github.com/basho/lager.git",{branch,"master"}}},
   {wok_message,".*",{git,"git@gitlab.botsunit.com:msaas/wok_message.git",{branch,"master"}}},
