Add docker-compose file for docker

--- a/config/wok.config
+++ b/config/wok.config
@@ -78,7 +78,9 @@
   ]},
   {kafe, [
     {brokers, [
-      {"localhost", 9092}
+      {"localhost", 9092},
+      {"localhost", 9093},
+      {"localhost", 9094}
     ]},
     {client_id, <<"kafe">>},
     {api_version, 0},
