Add namespaces and resources support

--- a/config/wok.config
+++ b/config/wok.config
@@ -23,8 +23,8 @@
     ]}
   , {middlewares, [
       {dummy_middleware, [
-        no_route_prefix,
-        {route_prefix, "/dummy"},
+        no_default_namespace,
+        {namespace, "/dummy"},
         {route, "/dummy_get", "/get_folks"},
         {http, [
           {only, ["*"]},
@@ -45,8 +45,11 @@
       {ip, "0.0.0.0"},
       {max_conn, 100},
       {routes, [
-        {'GET', "/my_service", {dummy_service_handler, my_service_get}},
-        {'GET', "/my_service2", {dummy_service_handler, my_service_get2}},
+        {namespace, "/api", [
+          {resources, user, dummy_user_handler},
+          {'GET', "/my_service", {dummy_service_handler, my_service_get}},
+          {'GET', "/my_service2", {dummy_service_handler, my_service_get2}},
+        ]},
         {'POST', "/my_service", {dummy_service_handler, my_service_post}},
         {'WS', "/ws", dummy_service_handler},
         {static, "/public", {priv_dir, wok, "static"}}
