--- a/config/wok.config
+++ b/config/wok.config
@@ -48,7 +48,7 @@
         {namespace, "/api", [
           {resources, user, dummy_user_handler},
           {'GET', "/my_service", {dummy_service_handler, my_service_get}},
-          {'GET', "/my_service2", {dummy_service_handler, my_service_get2}},
+          {'GET', "/my_service2", {dummy_service_handler, my_service_get2}}
         ]},
         {'POST', "/my_service", {dummy_service_handler, my_service_post}},
         {'WS', "/ws", dummy_service_handler},
