Update message controler

--- a/config/wok.config
+++ b/config/wok.config
@@ -1,7 +1,7 @@
 [
   {wok, [
     {messages, [
-      {handler, wok_message},
+      {handler, wok_default_message_handler},
       {controlers, [
         {<<"my_service/my_controler/my_action">>, {dummy_service_handler, my_action}},
         {<<"my_service/my_controler/my_answer">>, {dummy_service_handler, my_answer}}
@@ -46,7 +46,7 @@
       {max_conn, 100},
       {routes, [
         {namespace, "/api", [
-          {resources, user, dummy_user_handler},
+          % {resources, user, dummy_user_handler},
           {'GET', "/my_service", {dummy_service_handler, my_service_get}},
           {'GET', "/my_service2", {dummy_service_handler, my_service_get2}}
         ]},
