Add possibility to start a server on wok start.
In the configuration you can specify a list or server (or supervisor)
via the key "starts". This key take a list or tuples where the first
element is an atom giving the name of the server or supervisor. The
second element is the list of parameters passed to the start function of
the server (or supervisor). The last element is the type : worker
(default) or supervisor.

--- a/config/wok.config
+++ b/config/wok.config
@@ -18,6 +18,9 @@
         {<<"service">>, [{fetch_frequency, 10000}, {max_bytes, 10485760}, {max_messages, 1000}]}
       ]}
     ]}
+  , {start, [
+      % {module, [args], supervisor|worker}
+    ]}
   , {initializer, [
       {dummy_initializer, [dummy_initializer, state]}
     ]}
