--- a/config/wok.config
+++ b/config/wok.config
@@ -89,7 +89,10 @@
       {"localhost", 9094}
     ]},
     {client_id, <<"kafe">>},
-    {api_version, 0},
+    {pool_size, 1},
+    {chunk_pool_size, 2},
+    {brokers_update_frequency, 10000},
+    {api_version, 1},
     {correlation_id, 0},
     {socker, [
       {sndbuf, 4194304},
