Issue #24 : Make message compression optional

--- a/config/wok.config
+++ b/config/wok.config
@@ -1,7 +1,7 @@
 [
   {wok, [
     {messages, [
-      {handler, wok_default_message_handler},
+      {handler, {wok_default_message_handler, [{headers, #{compress => false}}]}},
       {controlers, [
         {<<"my_service/my_controler/my_action">>, {dummy_service_handler, my_action}},
         {<<"my_service/my_controler/my_answer">>, {dummy_service_handler, my_answer}}
