--- a/rebar.config
+++ b/rebar.config
@@ -1,15 +1,16 @@
 {erl_opts, [debug_info, warn_export_vars, warn_shadow_vars, warn_obsolete_guard]}.
 {shell, [{config, "config/wok.config"}]}.
 
-{plugins, [rebar3_elixir]}.
+{plugins, [
+           {rebar3_elixir, {git, "https://github.com/botsunit/rebar3_elixir.git", {branch, "master"}}}
+          ]}.
 
-{elixir_bindings, [wok, wok_request, wok_response, wok_routes, wok_message]}.
+{elixir_bindings, [wok, wok_request, wok_response, wok_routes, wok_message, wok_producer]}.
 
 {deps, [
   {lager, "~> 3.2.0"},
   {wok_http_adapter, {git, "git@gitlab.botsunit.com:msaas/wok_http_adapter.git", {branch, "master"}}},
   {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {branch, "master"}}},
-  {wok_producer, {git, "git@gitlab.botsunit.com:msaas/wok_producer.git", {branch, "master"}}},
   {pipette, {git, "git@gitlab.botsunit.com:msaas/pipette.git", {branch, "master"}}},
   {kafe, {git, "https://github.com/botsunit/kafe.git", {branch, "master"}}},
   {cowboy_default_static_file, {git, "https://github.com/botsunit/cowboy_default_static_file.git", {branch, "master"}}},
