--- a/rebar.config
+++ b/rebar.config
@@ -2,9 +2,10 @@
 {shell, [{config, "config/wok.config"}]}.
 
 {plugins, [
-           {rebar3_elixir, "0.0.4"}
+           {rebar3_elixir, "0.0.5"}
+           % {rebar3_elixir, {git, "https://github.com/botsunit/rebar3_elixir.git", {branch, "master"}}}
           ]}.
-
+{elixir_version, "~> 1.2"}.
 {elixir_bindings, [wok, wok_request, wok_response, wok_routes, wok_message, wok_producer]}.
 
 {deps, [
