Issue #22 : Add producer srv

--- a/config/wok.config
+++ b/config/wok.config
@@ -18,6 +18,11 @@
         {<<"service">>, [{fetch_frequency, 10000}, {max_bytes, 10485760}, {max_messages, 1000}]}
       ]}
     ]}
+  , {producer, [
+      {handler, dummy_producer_handler},
+      {frequency, 5000},
+      {number_of_messages, 1000}
+    ]}
   , {start, [
       % {module, [args], supervisor|worker}
     ]}
