--- a/rebar.config
+++ b/rebar.config
@@ -3,13 +3,13 @@
 
 {plugins, [
            {rebar3_elixir, "0.0.5"}
-           % {rebar3_elixir, {git, "https://github.com/botsunit/rebar3_elixir.git", {branch, "master"}}}
           ]}.
 {elixir_version, "~> 1.2"}.
 {elixir_bindings, [wok, wok_request, wok_response, wok_routes, wok_message, wok_producer]}.
 
 {deps, [
   {lager, "~> 3.2"},
+  {lager_json_formatter, "~> 0.0.3"},
   {wok_http_adapter, {git, "git@gitlab.botsunit.com:msaas/wok_http_adapter.git", {branch, "master"}}},
   {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {branch, "master"}}},
   {pipette, {git, "git@gitlab.botsunit.com:msaas/pipette.git", {branch, "master"}}},
@@ -19,8 +19,7 @@
   {bucs, {git, "https://github.com/botsunit/bucs.git", {branch, "master"}}},
   {doteki, {git, "https://github.com/botsunit/doteki.git", {branch, "master"}}},
   {uuid, {git, "https://github.com/avtobiff/erlang-uuid.git", {tag, "v0.5.0"}}},
-  {tempfile, {git, "https://github.com/botsunit/tempfile.git", {branch, "master"}}},
-  {lager_default_formatter, {git, "git@gitlab.botsunit.com:msaas/lager_json_formatter.git", {branch, "master"}}}
+  {tempfile, {git, "https://github.com/botsunit/tempfile.git", {branch, "master"}}}
  ]}.
 
 
