Add producer handler example

--- a/config/wok.config
+++ b/config/wok.config
@@ -4,6 +4,7 @@
       {handler, {wok_default_message_handler, [{headers, #{compress => false}}]}},
       {controlers, [
         {<<"my_service/my_controler/my_action">>, {dummy_service_handler, my_action}},
+        {<<"my_service/my_controler/my_async_action">>, {dummy_service_handler, my_async_action}},
         {<<"my_service/my_controler/my_answer">>, {dummy_service_handler, my_answer}}
       ]},
       {consumer_group, <<"MyConsumer">>},
@@ -24,7 +25,7 @@
       {number_of_messages, 1000}
     ]}
   , {start, [
-      % {module, [args], supervisor|worker}
+      {dummy_producer_handler, [], worker}
     ]}
   , {initializer, [
       {dummy_initializer, [dummy_initializer, state]}
