Add parameters' support to message routes

--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,7 @@
   {lager, "~> 3.2"},
   {lager_json_formatter, "~> 0.0.3"},
   {wok_http_adapter, {git, "git@gitlab.botsunit.com:msaas/wok_http_adapter.git", {tag, "0.1.0"}}},
-  {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {tag, "0.4.0"}}},
+  {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {branch, "master"}}},
   {pipette, {git, "git@gitlab.botsunit.com:msaas/pipette.git", {tag, "0.1.1"}}},
   {kafe, "~> 1.5"},
   {cowboy_default_static_file, {git, "https://github.com/botsunit/cowboy_default_static_file.git", {tag, "1.2.1"}}},
