Add example for parameterized message routes

--- a/config/wok.config
+++ b/config/wok.config
@@ -5,7 +5,8 @@
       {controlers, [
         {<<"my_service/my_controler/my_action">>, {dummy_service_handler, my_action}},
         {<<"my_service/my_controler/my_async_action">>, {dummy_service_handler, my_async_action}},
-        {<<"my_service/my_controler/my_answer">>, {dummy_service_handler, my_answer}}
+        {<<"my_service/my_controler/my_answer">>, {dummy_service_handler, my_answer}},
+        {<<"my_service/my_controler/:action/:id">>, {dummy_service_handler, parameterized_action}}
       ]},
       {consumer_group, <<"MyConsumer">>},
       {local_queue_name, <<"my_local_queue">>},
