--- a/rebar.config
+++ b/rebar.config
@@ -1,23 +1,26 @@
 {erl_opts, [debug_info, warn_export_vars, warn_shadow_vars, warn_obsolete_guard]}.
 {shell, [{config, "config/wok.config"}]}.
 
-{plugins, [rebar3_elixir]}.
+{plugins, [
+           rebar3_elixir,
+           {rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "0.1.6"}}}
+          ]}.
 {elixir_version, "~> 1.2"}.
 {elixir_bindings, [wok, wok_request, wok_response, wok_routes, wok_message, wok_producer]}.
 
 {deps, [
   {lager, "~> 3.2"},
-  {lager_json_formatter, "~> 0.0.3"},
-  {wok_http_adapter, {git, "git@gitlab.botsunit.com:msaas/wok_http_adapter.git", {tag, "0.1.0"}}},
-  {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {tag, "0.4.2"}}},
-  {pipette, {git, "git@gitlab.botsunit.com:msaas/pipette.git", {tag, "0.1.1"}}},
-  {kafe, "~> 1.5.1"},
-  {cowboy_default_static_file, {git, "https://github.com/botsunit/cowboy_default_static_file.git", {tag, "1.2.1"}}},
+  {lager_json_formatter, "~> 0.0.4"},
+  {wok_http_adapter, {git, "git@gitlab.botsunit.com:msaas/wok_http_adapter.git", {tag, "0.1.1"}}},
+  {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {tag, "0.4.4"}}},
+  {pipette, {git, "git@gitlab.botsunit.com:msaas/pipette.git", {tag, "0.1.2"}}},
+  {kafe, "~> 1.6.0"},
+  {cowboy_default_static_file, {git, "https://github.com/botsunit/cowboy_default_static_file.git", {tag, "1.2.2"}}},
   {cowboy, {git, "https://github.com/ninenines/cowboy.git", {tag, "2.0.0-pre.3"}}},
-  {bucs, "~> 0.1.6"},
-  {doteki, "~> 0.1.9"},
+  {bucs, "~> 0.1.7"},
+  {doteki, "~> 0.1.10"},
   {uuid, {git, "https://github.com/avtobiff/erlang-uuid.git", {tag, "v0.5.0"}}},
-  {tempfile, {git, "https://github.com/botsunit/tempfile.git", {tag, "1.1.1"}}}
+  {tempfile, {git, "https://github.com/botsunit/tempfile.git", {tag, "1.1.2"}}}
  ]}.
 
 
@@ -30,7 +33,7 @@
             {test, [
                     {deps, [
                             meck,
-                            {wok_tests, {git, "git@gitlab.botsunit.com:msaas/wok_tests.git", {branch, "master"}}}
+                            {wok_tests, {git, "git@gitlab.botsunit.com:msaas/wok_tests.git", {tag, "0.2.2"}}}
                            ]}
                    ]},
             {doc, [
@@ -49,4 +52,20 @@
                                ]}
                    ]}
            ]}.
+
+{elvis,
+   [#{dirs => ["src", "test"],
+      filter => "*.erl",
+      rules => [{elvis_style, line_length, #{limit => 180}},
+                {elvis_style, no_tabs},
+                {elvis_style, no_trailing_whitespace},
+                {elvis_style, macro_names},
+                {elvis_style, macro_module_names},
+                {elvis_style, dont_repeat_yourself, #{min_complexity => 25}},
+                {elvis_style, operator_spaces, #{rules => [{right, ","},
+                                                           {right, "++"},
+                                                           {left, "++"}]}}]},
+    #{dirs => ["."],
+      filter => "rebar.config",
+      rules => [{elvis_project, no_deps_master_rebar, []}]}]}.
 
