--- a/rebar.config
+++ b/rebar.config
@@ -9,21 +9,16 @@
 {elixir_bindings, [wok, wok_request, wok_response, wok_routes, wok_message, wok_producer]}.
 
 {deps, [
-  {lager, "~> 3.2"},
-  {lager_json_formatter, {git, "https://github.com/botsunit/lager_json_formatter.git", {branch, "master"}}},
-  {pipette, {git, "git@gitlab.botsunit.com:msaas/pipette.git", {branch, "master"}}},
-  {kafe, "~> 1.6.0"},
+  {lager, "~> 3.2.0"},
+  {lager_json_formatter, {git, "https://github.com/botsunit/lager_json_formatter.git", {tag, "0.1.0"}}},
+  {pipette, {git, "git@gitlab.botsunit.com:msaas/pipette.git", {tag, "0.1.3"}}},
+  {kafe, "~> 1.6.1"},
 
-  {bucs, "~> 0.1.7"},
-  {doteki, "~> 0.1.10"},
-  {uuid, {git, "https://github.com/botsunit/erlang-uuid.git", {branch, "master"}}},
+  {bucs, "~> 0.1.8"},
+  {doteki, "~> 0.1.11"},
+  {uuid, {git, "https://github.com/botsunit/erlang-uuid.git", {tag, "0.6.0"}}},
 
-  {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {branch, "master"}}}
-
-%   {wok_http_adapter, {git, "git@gitlab.botsunit.com:msaas/wok_http_adapter.git", {tag, "0.1.1"}}},
-%   {cowboy_default_static_file, {git, "https://github.com/botsunit/cowboy_default_static_file.git", {tag, "1.2.2"}}},
-%   {cowboy, {git, "https://github.com/ninenines/cowboy.git", {tag, "2.0.0-pre.3"}}},
-%   {tempfile, {git, "https://github.com/botsunit/tempfile.git", {tag, "1.1.2"}}}
+  {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {tag, "0.5.0"}}}
  ]}.
 
 
@@ -36,7 +31,7 @@
             {test, [
                     {deps, [
                             meck,
-                            {wok_tests, {git, "git@gitlab.botsunit.com:msaas/wok_tests.git", {tag, "0.2.2"}}}
+                            {wok_tests, {git, "git@gitlab.botsunit.com:msaas/wok_tests.git", {tag, "0.2.3"}}}
                            ]}
                    ]},
             {doc, [
