--- a/rebar.config
+++ b/rebar.config
@@ -19,7 +19,7 @@
   {doteki, "~> 0.1.11"},
   {uuid, {git, "https://github.com/botsunit/erlang-uuid.git", {tag, "0.6.0"}}},
 
-  {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {tag, "0.5.0"}}}
+  {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {branch, "master"}}}
  ]}.
 
 
