--- a/rebar.config
+++ b/rebar.config
@@ -11,7 +11,7 @@
 {deps, [
   {lager, "~> 3.2.0"},
   {lager_json_formatter, {git, "https://github.com/botsunit/lager_json_formatter.git", {tag, "0.1.0"}}},
-  {pipette, {git, "git@gitlab.botsunit.com:msaas/pipette.git", {tag, "0.1.3"}}},
+  {pipette, {git, "git@gitlab.botsunit.com:msaas/pipette.git", {branch, "master"}}},
   % {kafe, "~> 1.6.1"},
   {kafe, {git, "https://github.com/botsunit/kafe.git", {branch, "master"}}},
 
