--- a/config/wok.config
+++ b/config/wok.config
@@ -14,10 +14,10 @@
       {max_services_fork, 3},
       {topics, [
         % {topic name, options}
-        {<<"test">>, one_for_one, [{fetch_frequency, 5000}, {max_bytes, 10485760}, {max_messages, 1000}]},
-        {<<"repl">>, one_for_all, [{fetch_frequency, 8000}, {max_bytes, 10485760}, {max_messages, 1000}]},
-        {<<"public">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}, {max_messages, 1000}]},
-        {<<"service">>, [{fetch_frequency, 10000}, {max_bytes, 10485760}, {max_messages, 1000}]}
+        {<<"test">>, one_for_one, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
+        {<<"repl">>, one_for_all, [{fetch_frequency, 8000}, {max_bytes, 10485760}]},
+        {<<"public">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
+        {<<"service">>, [{fetch_frequency, 10000}, {max_bytes, 10485760}]}
       ]}
     ]}
   , {producer, [
