--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,8 @@
   {bucs, "~> 0.1.9"},
   {doteki, "~> 0.1.13"},
   {uuid, {git, "https://github.com/botsunit/erlang-uuid.git", {tag, "0.6.0"}}},
-  {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {tag, "0.5.1"}}}
+  {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {tag, "0.5.1"}}},
+  {metrics, "~> 2.1.0"}
  ]}.
 
 
@@ -33,6 +34,11 @@
                             {wok_tests, {git, "git@gitlab.botsunit.com:msaas/wok_tests.git", {tag, "0.2.3"}}}
                            ]}
                    ]},
+            {dev, [
+                   {deps, [
+                           {folsom, "~> 0.8.3"}
+                          ]}
+                  ]},
             {doc, [
                    {deps, [
                            {edown, {git, "https://github.com/botsunit/edown.git", {branch, "master"}}}
