--- a/config/wok.config
+++ b/config/wok.config
@@ -122,5 +122,9 @@
       {lager_file_backend, [{file, "log/wok_debug.log"}, {level, debug}, {formatter, lager_json_formatter}]},
       {lager_file_backend, [{file, "log/wok_console.log"}, {level, info}, {formatter, lager_json_formatter}]}
     ]}
+  ]},
+  {metrics, [
+    {metrics_mod, metrics_folsom},
+    {metrics_prefix, my_bot}
   ]}
 ].
