Use wok_tests master

--- a/rebar.config
+++ b/rebar.config
@@ -31,7 +31,7 @@
             {test, [
                     {deps, [
                             meck,
-                            {wok_tests, {git, "git@gitlab.botsunit.com:msaas/wok_tests.git", {tag, "0.2.3"}}}
+                            {wok_tests, {git, "git@gitlab.botsunit.com:msaas/wok_tests.git", {branch, "master"}}}
                            ]}
                    ]},
             {dev, [
