--- a/rebar.config
+++ b/rebar.config
@@ -18,7 +18,8 @@
   {doteki, "~> 0.1.13"},
   {uuid, {git, "https://github.com/botsunit/erlang-uuid.git", {tag, "0.6.0"}}},
   {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {tag, "0.5.1"}}},
-  {metrics, "~> 2.1.0"}
+  % {metrics, "~> 2.1.0"}
+  {metrics, {git, "https://github.com/botsunit/erlang-metrics.git", {branch, "add_delete"}}}
  ]}.
 
 
