--- a/rebar.config
+++ b/rebar.config
@@ -35,7 +35,7 @@
                             {wok_tests, {git, "git@gitlab.botsunit.com:msaas/wok_tests.git", {branch, "master"}}}
                            ]}
                    ]},
-            {dev, [
+            {dev_metrics, [
                    {deps, [
                            {folsom, "~> 0.8.3"}
                           ]}
