--- a/config/wok.config
+++ b/config/wok.config
@@ -9,12 +9,13 @@
         {<<"my_service/my_controler/:action/:id">>, {dummy_service_handler, parameterized_action}}
       ]},
       {consumer_group, <<"MyConsumer">>},
+      % {consumer_group, {random, [{prefix, hello}]}},
       {local_queue_name, <<"my_local_queue">>},
       {local_consumer_group, <<"MyLocalConsumer">>},
       {max_services_fork, 3},
       {topics, [
         % {topic name, options}
-        {<<"test">>, one_for_one, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
+        {<<"test">>, one_for_one, [{fetch_frequency, 5000}, {max_bytes, 10485760}, {from_beginning, true}]},
         {<<"repl">>, one_for_all, [{fetch_frequency, 8000}, {max_bytes, 10485760}]},
         {<<"public">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
         {<<"service">>, [{fetch_frequency, 10000}, {max_bytes, 10485760}]}
