--- a/config/wok.config
+++ b/config/wok.config
@@ -10,13 +10,10 @@
       ]},
       {consumer_group, <<"MyConsumer">>},
       % {consumer_group, {random, [{prefix, hello}]}},
-      {local_queue_name, <<"my_local_queue">>},
-      {local_consumer_group, <<"MyLocalConsumer">>},
-      {max_services_fork, 3},
       {topics, [
         % {topic name, options}
-        {<<"test">>, one_for_one, [{fetch_frequency, 5000}, {max_bytes, 10485760}, {from_beginning, true}]},
-        {<<"repl">>, one_for_all, [{fetch_frequency, 8000}, {max_bytes, 10485760}]},
+        {<<"test">>, [{max_bytes, 10485760}, {from_beginning, true}]},
+        {<<"repl">>, [{fetch_frequency, 8000}, {max_bytes, 10485760}]},
         {<<"public">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
         {<<"service">>, [{fetch_frequency, 10000}, {max_bytes, 10485760}]}
       ]}
@@ -107,14 +104,6 @@
       {recbuf, 4194304},
       {buffer, 4194304}
     ]}
-  ]},
-  {pipette, [
-    {segment_path, "./queues"},
-    {segment_memory_size, 10485760}, % B
-    {segment_file_size, 1073741824}, % B
-    {segment_flush_frequency, 0}, % ms (if = 0 flush every new data; if -1 never flush))
-    {retention_hours, 1680}, % hours -- default 128
-    {retention_check_interval, 300000} % ms
   ]},
   {lager, [
     {handlers, [
