--- a/rebar.config
+++ b/rebar.config
@@ -11,13 +11,12 @@
 {deps, [
   {lager, "~> 3.2.0"},
   {lager_json_formatter, "~> 0.1.1"},
-  {pipette, {git, "git@gitlab.botsunit.com:msaas/pipette.git", {tag, "0.1.4"}}},
   % {kafe, "~> 1.6.2"},
   {kafe, {git, "https://github.com/botsunit/kafe.git", {branch, "2.0.0"}}},
   {bucs, "~> 0.1.9"},
   {doteki, "~> 0.1.13"},
   {uuid, {git, "https://github.com/botsunit/erlang-uuid.git", {tag, "0.6.0"}}},
-  {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {tag, "0.5.1"}}},
+% TODO  {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {tag, "0.5.1"}}},
   % {metrics, "~> 2.1.0"}
   {metrics, {git, "https://github.com/botsunit/erlang-metrics.git", {branch, "add_delete"}}}
  ]}.
@@ -62,6 +61,11 @@
                           rules => [{elvis_project, no_deps_master_rebar, []}]}]}
                       ]}
            ]}.
+
+{xref_warnings,false}.
+{xref_extra_paths,[]}.
+{xref_checks,[undefined_function_calls, undefined_functions, locals_not_used,
+              deprecated_function_calls, deprecated_functions]}.
 
 {elvis,
    [#{dirs => ["src", "test"],
