--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,24 @@
            {rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "0.1.6"}}}
           ]}.
 {elixir_version, "~> 1.2"}.
-{elixir_bindings, [wok, wok_request, wok_response, wok_routes, wok_message, wok_producer]}.
+{elixir_bindings, [{wok, [{except, [state]}]},
+                   wok_request,
+                   wok_response,
+                   wok_routes,
+                   {wok_message_handler, [{except, [get_uuid
+                                                    , get_to
+                                                    , get_from
+                                                    , get_headers
+                                                    , get_body
+                                                    , get_params]}]},
+                   {wok_message, [{except, [new
+                                            , set_params
+                                            , set_action
+                                            , set_to
+                                            , set_global_state
+                                            , set_local_state
+                                            , get_local_state
+                                            , get_response]}]}]}.
 
 {deps, [
   {lager, "~> 3.2.0"},
@@ -16,7 +33,6 @@
   {bucs, "~> 0.1.9"},
   {doteki, "~> 0.1.13"},
   {uuid, {git, "https://github.com/botsunit/erlang-uuid.git", {tag, "0.6.0"}}},
-% TODO  {wok_message_handler, {git, "git@gitlab.botsunit.com:msaas/wok_message_handler.git", {tag, "0.5.1"}}},
   % {metrics, "~> 2.1.0"}
   {metrics, {git, "https://github.com/botsunit/erlang-metrics.git", {branch, "add_delete"}}}
  ]}.
@@ -30,8 +46,7 @@
 {profiles, [
             {test, [
                     {deps, [
-                            meck,
-                            {wok_tests, {git, "git@gitlab.botsunit.com:msaas/wok_tests.git", {branch, "master"}}}
+                            meck
                            ]}
                    ]},
             {dev_metrics, [
