--- a/rebar.config
+++ b/rebar.config
@@ -14,6 +14,7 @@
                                                     , get_body
                                                     , get_params]}]},
                    {wok_message, [{except, [new
+                                            , new_req
                                             , set_params
                                             , set_action
                                             , set_to
