Update doc and Elixir lib

--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,9 @@
                                                     , get_from
                                                     , get_headers
                                                     , get_body
-                                                    , get_params]}]},
+                                                    , get_params
+                                                    , get_topic
+                                                    , get_partition]}]},
                    {wok_message, [{except, [new
                                             , new_req
                                             , set_params
