--- a/rebar.config
+++ b/rebar.config
@@ -17,6 +17,7 @@
                                                     , get_partition]}]},
                    {wok_message, [{except, [new
                                             , new_req
+                                            , build_event_message
                                             , set_params
                                             , set_action
                                             , set_to
