Update Elixir libs

--- a/rebar.config
+++ b/rebar.config
@@ -24,7 +24,8 @@
                                             , set_global_state
                                             , set_local_state
                                             , get_local_state
-                                            , get_response]}]}]}.
+                                            , get_response]}]},
+                   {wok_producer, [{except, [start]}]}]}.
 
 {deps, [
   {lager, "~> 3.2.0"},
