--- a/rebar.config
+++ b/rebar.config
@@ -43,6 +43,8 @@
 {eunit_opts, [
               verbose, {report, {eunit_surefire, [{dir, "test/eunit"}]}}
              ]}.
+{cover_enabled, true}.
+
 {pre_hooks, [{eunit, "mkdir -p test/eunit"}]}.
 
 {profiles, [
@@ -56,20 +58,20 @@
                            {folsom, "~> 0.8.3"}
                           ]}
                   ]},
-            {doc, [
-                   {deps, [
-                           {edown, {git, "https://github.com/botsunit/edown.git", {branch, "master"}}}
-                          ]},
-                   {edoc_opts, [
-                                {doclet, edown_doclet}
-                                , {app_default, "http://www.erlang.org/doc/man"}
-                                , {source_path, ["src"]}
-                                , {overview, "overview.edoc"}
-                                , {stylesheet, ""}
-                                , {image, ""}
-                                , {edown_target, gitlab}
-                                , {top_level_readme, {"./README.md", "https://gitlab.botsunit.com/msaas/wok"}}
-                               ]}
+            {docs, [
+                    {deps, [
+                            {edown, {git, "https://github.com/botsunit/edown.git", {branch, "master"}}}
+                           ]},
+                    {edoc_opts, [
+                                 {doclet, edown_doclet}
+                                 , {app_default, "http://www.erlang.org/doc/man"}
+                                 , {source_path, ["src"]}
+                                 , {overview, "overview.edoc"}
+                                 , {stylesheet, ""}
+                                 , {image, ""}
+                                 , {edown_target, gitlab}
+                                 , {top_level_readme, {"./README.md", "https://gitlab.botsunit.com/msaas/wok"}}
+                                ]}
                    ]},
             {release, [
                        {elvis, [
